// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KeeperRewards harvest (own escrow) succeeds for latest rewards root 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 111797,
}
`;

exports[`KeeperRewards harvest (own escrow) succeeds for latest rewards root 2`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 55299,
}
`;

exports[`KeeperRewards harvest (own escrow) succeeds for previous rewards root 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 113951,
}
`;

exports[`KeeperRewards harvest (own escrow) succeeds for previous rewards root 2`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 74659,
}
`;

exports[`KeeperRewards harvest (own escrow) succeeds for previous rewards root 3`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 57453,
}
`;

exports[`KeeperRewards harvest (shared escrow) succeeds for latest rewards root 1`] = `
Object {
  "calldataByteLength": 292,
  "gasUsed": 144598,
}
`;

exports[`KeeperRewards harvest (shared escrow) succeeds for latest rewards root 2`] = `
Object {
  "calldataByteLength": 292,
  "gasUsed": 51443,
}
`;

exports[`KeeperRewards harvest (shared escrow) succeeds for previous rewards root 1`] = `
Object {
  "calldataByteLength": 292,
  "gasUsed": 146752,
}
`;

exports[`KeeperRewards harvest (shared escrow) succeeds for previous rewards root 2`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 91051,
}
`;

exports[`KeeperRewards harvest (shared escrow) succeeds for previous rewards root 3`] = `
Object {
  "calldataByteLength": 292,
  "gasUsed": 53597,
}
`;

exports[`KeeperRewards update rewards succeeds 1`] = `
Object {
  "calldataByteLength": 772,
  "gasUsed": 144315,
}
`;

exports[`KeeperRewards update rewards succeeds 2`] = `
Object {
  "calldataByteLength": 772,
  "gasUsed": 127227,
}
`;
